--- a/MailBot/MailBot.csproj
+++ b/MailBot/MailBot.csproj
@@ -11,10 +11,11 @@
     <ItemGroup>
       <PackageReference Include="MailKit" Version="4.10.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.1" />
+      <PackageReference Include="Telegram.Bot" Version="22.3.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
       <Folder Include="Mapping\" />
     </ItemGroup>
 
