--- a/MailBot/appsettings.json
+++ b/MailBot/appsettings.json
@@ -1,8 +1,6 @@
 {
-  "MailSettings": {
-    "ImapServer": "imap.mail.ru",
-    "ImapPort": 993,
-    "UseSsl": true
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=127.0.0.1; Port=5432; Database=MailBot;userid=postgres; Password=reyeny123"
   },
   "Telegram": {
     "BotToken": ""
